Gift Feature array.

--- a/gift.html
+++ b/gift.html
@@ -9,7 +9,9 @@ gift_two_background_image: "/assets/images/gift.jpg"
 gift_two_amount: "45"
 gift_three_background_image: "/assets/images/watch-christmas.jpg"
 gift_three_amount: "100"
-
+gift_one_features: ['one']
+gift_two_features: ['one']
+gift_three_features: ['one', 'two', 'three']
 ---
 <div class="containers">
   <div class="download-app appinstall-view" id="download-app">
