section_one_image added.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
 hero_video_title: Live 1-on-1 Workouts
 hero_video_description: Train when you want, where you want, without commitments.
 hero_video_button_label: Watch Video
+section_one_image: "/assets/images/traniee.png"
 
 ---
 <div class="containers">
