Home page sections

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 ---
 layout: default
+
 hero_video_portrait: "/assets/images/hero_vid_portrait.mp4"
 hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
 hero_video_title: Live 1-on-1 Workouts
 hero_video_description: Train when you want, where you want, without commitments.
 hero_video_button_label: Watch Video
+
 section_one_image: "/assets/images/traniee.png"
+section_one_title: ""
+section_one_description: ""
+
+section_two_image: "/assets/images/traniee.png"
+section_two_title: ""
+section_two_description: ""
+
+section_three_image: "/assets/images/traniee.png"
+section_three_title: ""
+section_three_description: ""
+
 
 ---
 <div class="containers">
