--- a/testimonials.html
+++ b/testimonials.html
@@ -35,14 +35,14 @@ layout: default
               <div class="width-100 home-banner heroContainer">
                 <div class="width-100">
                   <video class="heroVideo portrait"
-                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload
+                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                     autoplay loop>
                     <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4"
                       type="video/mp4" class="portrait">
                     Your browser does not support the video tag.
                   </video>
                   <video class="heroVideo landscape"
-                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload
+                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                     autoplay loop>
                     <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4"
                       type="video/mp4" class="landscape">
