--- a/trainee.html
+++ b/trainee.html
@@ -1,5 +1,32 @@
 ---
 layout: default
+
+hero_video_portrait: "/assets/images/hero_vid_portrait.mp4"
+hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
+hero_video_title: Trainee
+hero_video_description: Train where you want, when you want.
+section_one_image: "/assets/images/trainee-1.png"
+section_one_title: Book sessions with trainers.
+section_one_description: Request a private session, or a public session to let others watch and cheer you on.
+
+section_two_image: "/assets/images/watch-connect.png"
+section_two_title: Train with live fitness data.
+section_two_description: Sync your Apple watch or get a FREE UBQFIT watch with monthly membership. Fitbit and Google Fit are coming soon too.
+
+section_three_image: "/assets/images/traniee-view.png"
+section_three_bg_image: "/assets/images/bg-blue-img.png"
+section_three_title: Exciting 1-on-1 public sessions.
+section_three_description: Watch LIVE or recorded training sessions. Chat or do the workouts.
+
+section_four_left_image: "/assets/images/fit.png"
+section_four_right_image: "/assets/images/chat-group-2.png"
+section_four_title: Train with live fitness data.
+section_four_description: Join us. Follow trainers and other trainees, donate to them, have Instagram followers come on UBQFIT and donate to YOU during workouts.
+section_four_subtitle: Linda.1 just donated $20 to your PayPal
+
+section_five_image: "/assets/images/trainee-calender-flow.png"
+section_five_title: Calendared sessions.
+section_five_description: Book training sessions with your favorite trainer 30 days in advance.
 ---
 <div class="containers">
   <!-- // app install page view -->
@@ -39,23 +66,23 @@ layout: default
                     <video class="heroVideo portrait"
                       poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                       autoplay loop>
-                      <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4"
+                      <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}"
                         type="video/mp4" class="portrait">
                       Your browser does not support the video tag.
                     </video>
                     <video class="heroVideo landscape"
                       poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                       autoplay loop>
-                      <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4"
+                      <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}"
                         type="video/mp4" class="landscape">
                       Your browser does not support the video tag.
                     </video>
                     <div class="banner-tittle">
                       <h1>
-                        Trainee
+                        {{ page.hero_video_title }}
                       </h1>
                       <h2>
-                        Train where you want, when you want.
+                        {{ page.hero_video_description }}
                       </h2>
                     </div>
                   </div>
@@ -64,74 +91,70 @@ layout: default
             </div>
             <div class="width-100 tranier-session bg-gray padding-0 margin-bottom-0">
               <h2 class="margin-bottom-30 padding-top-30">
-                Book sessions with trainers.
+                {{ page.section_one_title }}
               </h2>
               <div class="flex-center bor-bot-7">
                 <div class="width-50 float-left trainee-imgone">
                   <img class="obj-cover margin-left-5" style="width: 100%;max-width: 500px;"
-                    src="{{ site.url }}{{ site.baseurl }}/assets/images/trainee-1.png">
+                    src="{{ site.url }}{{ site.baseurl }}{{ page.section_one_image }}">
                 </div>
                 <div class="width-50 float-right">
                   <p class="right-5">
-                    Request a private session, or a public session to let others watch and cheer you on.
+                    {{ page.section_one_description }}
                   </p>
                 </div>
               </div>
               <h2 class="padding-top-30" style="background-color:#870509;color:#FFFFFF;margin-bottom: 0;">
-                Train with live fitness data.
+                {{ page.section_two_title }}
               </h2>
               <div class="flex-center red-bg">
                 <div class="width-50 float-left">
                   <div class="round-gray">
                     <p>
-                      Sync your Apple watch or get a FREE UBQFIT watch with monthly membership. Fitbit and Google Fit
-                      are
-                      coming soon too.
+                      {{ page.section_two_description }}
                     </p>
                   </div>
                 </div>
                 <div class="width-50 float-right watch-listimg">
                   <img class="obj-cover" style="width: 100%;max-width: 500px;"
-                    src="{{ site.url }}{{ site.baseurl }}/assets/images/watch-connect.png">
+                    src="{{ site.url }}{{ site.baseurl }}{{ page.section_two_image }}">
                 </div>
               </div>
               <div class="width-100 broadcast-bg relative">
-                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/bg-blue-img.png" width="100%" height="270px">
+                <img src="{{ site.url }}{{ site.baseurl }}{{ page.section_three_bg_image }}" width="100%" height="270px">
                 <div class="broadcast-details">
                   <h1>
-                    Exciting 1-on-1 public sessions.
+                    {{ page.section_three_title }}
                   </h1>
                   <p>
-                    Watch LIVE or recorded training sessions. Chat or do the workouts.
+                    {{ page.section_three_description }}
                   </p>
                 </div>
               </div>
               <div class="width-100 margin-bottom-40 bor-bot-7 trainee-workout">
-                <img src="{{ site.url }}{{ site.baseurl }}/assets/images/traniee-view.png" width="100%">
+                <img src="{{ site.url }}{{ site.baseurl }}{{ page.section_three_image }}" width="100%">
               </div>
               <div class="width-100 community-section margin-bottom-40 bor-bot-7">
                 <h2
                   style="width: 100%;max-width: 700px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
-                  UBQFIT fitness community.
+                  {{ page.section_four_title }}
                 </h2>
                 <p class="width-half mobile-half margin-bottom-50"
                   style="width: 100%;max-width: 700px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
-                  Join us. Follow trainers and other trainees, donate to them, have Instagram followers come on UBQFIT
-                  and
-                  donate to YOU during workouts.
+                  {{ page.section_four_description }}
                 </p>
                 <div class="flex-center">
                   <div class="width-50 float-left"
                     style="display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;">
                     <h5 class="white-bg-shadow"
                       style="right:0;padding-left:16px;padding-right:16px;-ms-flex-negative:0;flex-shrink:0;-webkit-box-flex:0;-ms-flex-positive:0;flex-grow:0;width:345px;font-size:15px;">
-                      Linda.1 just donated $20 to your PayPal
+                      {{ page.section_four_subtitle }}
                     </h5>
-                    <img class="obj-cover" src="{{ site.url }}{{ site.baseurl }}/assets/images/fit.png"
+                    <img class="obj-cover" src="{{ site.url }}{{ site.baseurl }}{{ page.section_four_left_image }}"
                       style="width: 100%;max-width: 500px;height:auto;max-height:878px;margin:auto;-webkit-box-flex:0;-ms-flex-positive:0;flex-grow:0;-ms-flex-negative:0;flex-shrink:0;-o-object-fit:contain;object-fit:contain;">
                   </div>
                   <div class="width-50 float-right">
-                    <img class="obj-cover" src="{{ site.url }}{{ site.baseurl }}/assets/images/chat-group-2.png"
+                    <img class="obj-cover" src="{{ site.url }}{{ site.baseurl }}{{ page.section_four_right_image }}"
                       width="100%">
                   </div>
                 </div>
@@ -140,15 +163,15 @@ layout: default
               <section class="tranier-payment-session">
                 <h2
                   style="width: 100%;max-width: 560px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
-                  Calendared sessions.
+                  {{ page.section_five_title }}
                 </h2>
                 <p class="margin-bottom-50"
                   style="width: 100%;max-width: 560px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
-                  Book training sessions with your favorite trainer 30 days in advance.
+                  {{ page.section_five_description }}
                 </p>
                 <div class="image-center calender-flow-img" style="margin-bottom: 32px;">
                   <img class="img-center "
-                    src="{{ site.url }}{{ site.baseurl }}/assets/images/trainee-calender-flow.png">
+                    src="{{ site.url }}{{ site.baseurl }}{{ page.section_five_image }}">
                 </div>
               </section>
               <!-- Calender Section end-->
