--- a/trainer.html
+++ b/trainer.html
@@ -1,5 +1,33 @@
 ---
 layout: default
+
+hero_video_portrait: "/assets/images/hero_vid_portrait.mp4"
+hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
+hero_video_title: Trainer
+hero_video_description: Earn money on your own time.
+
+section_one_image: "/assets/images/tranier-view.png"
+section_one_title: Make money. Build your community.
+section_one_description: Follow and be followed, notify followers when in a live session, contribute to our widely distributed blog and more. Grow your business to another level with UBQFIT tools.
+
+section_two_left_image: "/assets/images/tranier-ex.png"
+section_two_right_image: "/assets/images/chat-group.png"
+section_two_bg_image: "/assets/images/bradcast-bg.png"
+section_two_title: Broadcast your own workouts.
+section_two_description: Go live while working out, show your watch data on the screen and provide tips and tricks to current or future clients.
+
+section_three_image: "/assets/images/record-session.png"
+section_three_title: Use real-time fitness data.
+section_three_description: See real-time fitness data from clients and make training sessions powerful and exciting.
+
+section_four_image_one: "/assets/images/follower.png"
+section_four_image_two: "/assets/images/avaliable.png"
+section_four_title: Make money on your time.
+section_four_description: Trainees are looking for you. Go live and start making money on your free time.
+
+section_five_image: "/assets/images/trainer-calender-flow.png"
+section_five_title: Calendared sessions.
+section_five_description: Make your calendar available for clients to book sessions with you 30 days in advance.
 ---
 <div class="containers">
     <div class="download-app appinstall-view" id="download-app">
@@ -34,22 +62,22 @@ layout: default
                                 <div class="width-100">
                                     <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                                         preload autoplay loop>
-                                        <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4" type="video/mp4"
+                                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}" type="video/mp4"
                                             class="portrait">
                                         Your browser does not support the video tag.
                                     </video>
                                     <video class="heroVideo landscape" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                                         preload autoplay loop>
-                                        <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" type="video/mp4"
+                                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}" type="video/mp4"
                                             class="landscape">
                                         Your browser does not support the video tag.
                                     </video>
                                     <div class="banner-tittle">
                                         <h1>
-                                            Trainer
+                                            {{ page.hero_video_title }}
                                         </h1>
                                         <h2>
-                                            Earn money on your own time.
+                                            {{ page.hero_video_description }}
                                         </h2>
                                     </div>
                                 </div>
@@ -58,81 +86,77 @@ layout: default
                     </div>
                     <div class="width-100 tranier-session bg-gray  margin-bottom-0">
                         <h2 class="margin-bottom-0" style="margin-top:32px;">
-                            Make money. Build your community.
+                            {{ page.section_one_title }}
                         </h2>
                         <span class="red-shadow" style="z-index:0;">red shadow</span>
                         <div class="flex-center reverse-mobile-view">
                             <div class="width-50 float-left">
                                 <div class="round-gray">
                                     <p>
-                                        Follow and be followed, notify followers when in a live session, contribute
-                                        to our widely distributed blog and more. Grow your business to another level
-                                        with UBQFIT tools.
+                                        {{ page.section_one_description }}
                                     </p>
                                 </div>
                             </div>
                             <div class="width-50 float-right trainer-imgone" style="z-index:0;">
                                 <img class="obj-cover" style="width: 100%;max-width: 500px;z-index:100;"
-                                    src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-view.png">
+                                    src="{{ site.url }}{{ site.baseurl }}{{ page.section_one_image }}">
                             </div>
                         </div>
                         <div class="width-100 broadcast-bg relative">
-                            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/bradcast-bg.png" width="100%" height="270px">
+                            <img src="{{ site.url }}{{ site.baseurl }}{{ page.section_two_bg_image }}" width="100%" height="270px">
                             <div class="broadcast-details">
                                 <h1>
-                                    Broadcast your own workouts.
+                                    {{ page.section_two_title }}
                                 </h1>
                                 <p>
-                                    Go live while working out, show your watch data on the screen and provide tips
-                                    and tricks to current or future clients.
+                                    {{ page.section_two_description }}
                                 </p>
                             </div>
                         </div>
                         <div class="width-100 chat-group relative margin-bottom-50 bor-bot-7">
                             <div class="width-50 float-left">
-                                <img class="obj-cover tran-img" src="{{ site.url }}{{ site.baseurl }}/assets/images/tranier-ex.png" width="100%" height="800px">
+                                <img class="obj-cover tran-img" src="{{ site.url }}{{ site.baseurl }}{{ page.section_two_left_image }}" width="100%" height="800px">
                             </div>
                             <div class="width-50 float-right bg-block">
-                                <img class="obj-cover" src="{{ site.url }}{{ site.baseurl }}/assets/images/chat-group.png" width="100%" height="100%">
+                                <img class="obj-cover" src="{{ site.url }}{{ site.baseurl }}{{ page.section_two_right_image }}" width="100%" height="100%">
                             </div>
                         </div>
                         <div class="data-center margin-bottom-40 bor-bot-7">
                             <h2
                                 style="width: 100%;max-width: 700px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
-                                Use real-time fitness data.
+                                {{ page.section_three_title }}
                             </h2>
                             <p class="margin-bottom-30"
                                 style="width: 100%;max-width: 700px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
-                                See real-time fitness data from clients and make training sessions powerful and
-                                exciting.
+                                {{ page.section_three_description }}
                             </p>
-                            <img class="width-85-mobile" src="{{ site.url }}{{ site.baseurl }}/assets/images/record-session.png">
+                            <img class="width-85-mobile" src="{{ site.url }}{{ site.baseurl }}{{ page.section_three_image }}">
                         </div>
                         <div class="tranier-payment-session margin-bottom-40 bor-bot-7">
                             <h2
                                 style="width: 100%;max-width: 700px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
-                                Make money on your time.
+                                {{ page.section_four_title }}
                             </h2>
                             <p class="margin-bottom-50"
                                 style="width: 100%;max-width: 700px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
                                 Trainees are looking for you. Go live and start making money on your free time.
+                                {{ page.section_four_description }}
                             </p>
-                            <img class="img-center margin-bottom-70" src="{{ site.url }}{{ site.baseurl }}/assets/images/follower.png">
-                            <img class="img-center margin-bottom-40" src="{{ site.url }}{{ site.baseurl }}/assets/images/avaliable.png" width="75%">
+                            <img class="img-center margin-bottom-70" src="{{ site.url }}{{ site.baseurl }}{{ page.section_four_image_one }}">
+                            <img class="img-center margin-bottom-40" src="{{ site.url }}{{ site.baseurl }}{{ page.section_four_image_two }}" width="75%">
                         </div>
                         <!-- Calender Section Start-->
                         <section class="tranier-payment-session">
                             <h2
                                 style="width: 100%;max-width: 560px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
-                                Calendared sessions.
+                                {{ page.section_five_title }}
                             </h2>
                             <p class="margin-bottom-50"
                                 style="width: 100%;max-width: 560px;padding: 0 1rem;box-sizing: border-box;margin-left: auto;margin-right: auto;">
-                                Make your calendar available for clients to book sessions with you 30 days in
-                                advance.
+                                {{ page.section_five_description }}
                             </p>
                             <div class="image-center calender-flow-img" style="margin-bottom: 32px;">
-                                <img class="img-center " src="{{ site.url }}{{ site.baseurl }}/assets/images/trainer-calender-flow.png">
+                                <img class="img-center " src="{{ site.url }}{{ site.baseurl }}{{ page.section_five_image }}">
                             </div>
                         </section>
                         <!-- Calender Section end-->
