--- a/testimonials.html
+++ b/testimonials.html
@@ -1,5 +1,11 @@
 ---
 layout: default
+
+hero_video_portrait: "/assets/images/hero_vid_portrait.mp4"
+hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
+hero_video_title: Testimonials
+hero_video_description: See what others are saying.
+
 ---
 <div class="containers">
   <!-- // app install page view -->
@@ -37,20 +43,20 @@ layout: default
                   <video class="heroVideo portrait"
                     poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                     autoplay loop>
-                    <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4"
+                    <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}"
                       type="video/mp4" class="portrait">
                     Your browser does not support the video tag.
                   </video>
                   <video class="heroVideo landscape"
                     poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                     autoplay loop>
-                    <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4"
+                    <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}"
                       type="video/mp4" class="landscape">
                     Your browser does not support the video tag.
                   </video>
                   <div class="banner-tittle">
-                    <h1>Testimonials</h1>
-                    <h2 class="margin-bottom-15"> See what others are saying.</h2>
+                    <h1> {{ page.hero_video_title }} </h1>
+                    <h2 class="margin-bottom-15"> {{ hero_video_description }}</h2>
                     <button class="primary-btn review_btn"> Leave a Review</button>
                   </div>
                 </div>
