Removed hero_video_description page variable

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,8 +2,7 @@
 layout: default
 hero_video_portrait: "/assets/images/hero_vid_portrait.png"
 hero_video_landscape: "/assets/images/hero_vid_landscape.png"
-hero_video_title: Pricing
-hero_video_description: Find the right plan for you.
+hero_video_title: Privacy Policy
 section_title: UBQFIT Privacy Policy
 section_description: "<p>It’s free to watch. No commitments. </p><p>Choose either
   public or private.</p>"
