Site and base url added

--- a/dmca-policy.html
+++ b/dmca-policy.html
@@ -213,7 +213,7 @@ section_description: '<p>We respect the intellectual property rights of others j
   </div>
 </div>
 <!-- js Files -->
-<script src="js/jquery-3.4.1.min.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.4.1.min.js"></script>
 <script type='text/javascript'>(function () {
     var tp = document.createElement('script');
     tp.src = 'https://textpuff.com/textwidget/js/textpuffv2.js';
@@ -231,14 +231,14 @@ section_description: '<p>We respect the intellectual property rights of others j
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.min.js"></script>
 <!-- intel-input phone number validation -->
-<script src="js/intl-tel-input/build/js/intlTelInput.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/js/intlTelInput.js"></script>
 <!-- Start of ubqfit Zendesk Widget script -->
 <script id="ze-snippet"
   src="https://static.zdassets.com/ekr/snippet.js?key=70d2f53e-c4b9-48da-bc27-e5646f666d9d"> </script>
 <!-- End of ubqfit Zendesk Widget script -->
-<script src="js/custom.js"></script>
-<script src="js/moment.js"></script>
-<script src="js/services.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/custom.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/moment.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/services.js"></script>
 
 <script>
   moment().format();
