Video Poster image.

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -14,13 +14,13 @@ hero_video_description: DMCA Policy.
             <div class="row margin-0">
               <div class="width-100 home-banner heroContainer">
                 <div class="width-100">
-                  <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload autoplay
+                  <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload autoplay
                     loop>
                     <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_portrait.mp4" type="video/mp4" class="portrait">
                     Your browser does not support the video tag.
                   </video>
 
-                  <video class="heroVideo landscape" poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload autoplay
+                  <video class="heroVideo landscape" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload autoplay
                     loop>
                     <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" type="video/mp4" class="landscape">
                     Your browser does not support the video tag.
