--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -236,14 +236,14 @@ submit_button_text: Send
               <div class="width-100 home-banner heroContainer">
                 <div class="width-100">
                   <video class="heroVideo portrait"
-                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload
+                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                     autoplay loop>
                     <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}" type="video/mp4"
                       class="portrait">
                     Your browser does not support the video tag.
                   </video>
                   <video class="heroVideo landscape"
-                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload
+                    poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload
                     autoplay loop>
                     <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}" type="video/mp4"
                       class="landscape">
