--- a/blog.html
+++ b/blog.html
@@ -38,12 +38,12 @@ permalink: /blog.html
             <div class="row margin-0">
               <div class="width-100 home-banner heroContainer">
                 <div class="width-100">
-                  <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" width="100%" height="100%" muted
+                  <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%" height="100%" muted
                     playsinline preload autoplay loop>
                     <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}" type="video/mp4" class="portrait">
                     Your browser does not support the video tag.
                   </video>
-                  <video class="heroVideo landscape" poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" width="100%" height="100%" muted
+                  <video class="heroVideo landscape" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" width="100%" height="100%" muted
                     playsinline preload autoplay loop>
                     <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}" type="video/mp4" class="landscape">
                     Your browser does not support the video tag.
