--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -480,7 +480,7 @@ submit_button_text: Send
             <div class="row margin-0 relative">
               <div class="width-100 home-banner heroContainer">
                 <div class="width-100">
-                  <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/img/workout.jpg" muted playsinline preload autoplay
+                  <video class="heroVideo portrait" poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline preload autoplay
                     loop>
                     <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}" type="video/mp4" class="portrait">
                     Your browser does not support the video tag.
