Page variable changes

--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,8 @@
 layout: default
 hero_video_portrait: "/assets/images/hero_vid_portrait.mp4"
 hero_video_landscape: "/assets/images/hero_vid_landscape.mp4"
-hero_video_title: DMCA Policy
-hero_video_description: DMCA Policy.
+hero_video_title: Blog
+hero_video_description: Read about the latest fitness tricks and trends.
 
 ---
 
@@ -49,8 +49,8 @@ hero_video_description: DMCA Policy.
                     Your browser does not support the video tag.
                   </video>
                   <div class="banner-tittle">
-                    <h1>Blog</h1>
-                    <h2>Read about the latest fitness tricks and trends.</h2>
+                    <h1>{{ page.hero_video_title }}</h1>
+                    <h2>{{ page.hero_video_description }}</h2>
                   </div>
                 </div>
               </div>
