--- a/testimonials.html
+++ b/testimonials.html
@@ -55,7 +55,7 @@ hero_video_description: See what others are saying.
                   </video>
                   <div class="banner-tittle">
                     <h1> {{ page.hero_video_title }} </h1>
-                    <h2 class="margin-bottom-15"> {{ hero_video_description }}</h2>
+                    <h2 class="margin-bottom-15"> {{ page.hero_video_description }}</h2>
                     <button class="primary-btn review_btn"> Leave a Review</button>
                   </div>
                 </div>
