Updated testimonial page background.

--- a/testimonials.html
+++ b/testimonials.html
@@ -34,7 +34,7 @@ hero_video_description: See what others are saying.
   <div class="width-100">
     <div class="row">
       <div class="home-mainpage">
-        <div class="inner-page">
+        <div class="inner-page" style="background:#0e0e12;">
           <div class="width-100 relative">
             <div class="row margin-0">
               <div class="width-100 home-banner heroContainer">
