--- a/ourstory.html
+++ b/ourstory.html
@@ -32,7 +32,7 @@ section_description: '<p>Ellie grew up living all over the world, from the Middl
   fitness data any time of day, anywhere that’s convenient for you!</p>'
 
 ---
-<div class="containers">
+<div class="containers" style="background:#0e0e12;">
   <!-- // app install page view -->
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
