Updated blog and pricing background colors.

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@ hero_video_title: Blog
 hero_video_description: Read about the latest fitness tricks and trends.
 
 ---
-<div class="containers">
+<div class="containers" style="background:#0e0e12;">
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
       <div class="width-100 top-banner">
