--- a/pricing.html
+++ b/pricing.html
@@ -9,7 +9,7 @@ section_two_description: "<p>It’s free to watch. No commitments. </p><p>Choose
   public or private.</p>"
 
 ---
-<div class="containers">
+<div class="containers" style="background:#0e0e12;">
   <!-- // app install page view -->
   <div class="download-app appinstall-view" id="download-app">
     <div class="badge-wrapper">
