--- a/blog-detail.html
+++ b/blog-detail.html
@@ -6,7 +6,7 @@ hero_video_title: Blog
 hero_video_description: Read about the latest fitness tricks and trends.
 
 ---
-<div class="containers">
+<div class="containers" style="background:#0e0e12;">
   <div class="width-100">
     <div class="row">
       <div class="home-mainpage">
