Updated page backgrounds

--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@ hero_video_description: We would love to hear your questions/comments.
 submit_button_text: Send
 
 ---
-<div class="containers">
+<div class="containers" style="background:#0e0e12;">
 
   <div class="width-100">
     <div class="row">
