--- a/dmca-policy.html
+++ b/dmca-policy.html
@@ -63,7 +63,7 @@ section_description: '<p>We respect the intellectual property rights of others j
   UBQFIT App</p>'
 
 ---
-<div class="containers">
+<div class="containers" style="background:#0e0e12;">
   <div class="width-100">
     <div class="row">
       <div class="home-mainpage">
