--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -226,7 +226,7 @@ section_description: '<p>UBQFIT Inc. (“<strong> UB<em>Q</em>FIT</strong>”) i
 submit_button_text: Send
 
 ---
-<div class="containers">
+<div class="containers" style="background:#0e0e12;">
   <div class="width-100">
     <div class="row">
       <div class="home-mainpage">
