--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -471,7 +471,7 @@ section_description: '<p><strong>Overview</strong></p><p>Welcome to <strong>UB<e
 submit_button_text: Send
 
 ---
-<div class="containers">
+<div class="containers"style=" background:#0e0e12;">
   <div class="width-100">
     <div class="row">
       <div class="home-mainpage">
