--- a/gift.html
+++ b/gift.html
@@ -58,9 +58,9 @@ gift_three_features:
                           <source src="{{ site.url }}{{ site.baseurl }}/assets/images/video/loin_porit.mp4" type="video/mp4" class="portrait">
                           Your browser does not support the video tag.
                       </video>-->
-                    <div class="overlay"
+                    <!-- <div class="overlay"
                       style="background-color:rgba(0,0,0,0.35);position:absolute;top:0;right:0;bottom:0;left:0;z-index:5;">
-                    </div>
+                    </div> -->
                     <img class="heroVideo" src="{{ site.url }}{{ site.baseurl }}{{ page.hero_image }}"
                       alt="Image of Christmas" />
 
