--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
                     <div class="width-100 app-badge-content">
                         <a class="app-badge" style="margin-right: 11px;"
                             href='https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
-                                src="https://ubqfit.com/images/googleplay.png"></a>
+                                src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png"></a>
                         <a class="app-badge" href="https://apps.apple.com/us/app/ubqfit/id1441253233">
-                            <img  src="https://ubqfit.com/images/apple.png"  
+                            <img  src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png"  
                             alt="Ubqfit app from appstore for IOS">
                         </a>
                     </div>
@@ -125,9 +125,9 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
                 <div class="width-100 bottom-app">
                     <a class="app-badge"
                         href='https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
-                            src="https://ubqfit.com/images/googleplay.png"></a>
+                            src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png"></a>
                     <a class="app-badge" href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank"
-                        rel="noreferrer noopener"><img src="https://ubqfit.com/images/apple.png"></a>
+                        rel="noreferrer noopener"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png"></a>
                 </div>
             </div>
         </div>
