--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@ section_three_description: Lead a fitness event or accept 1-on-1 training sessio
                     <video class="heroVideo portrait"
                         poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                         preload autoplay loop>
-                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}"
-                            type="video/mp4" class="portrait">
+                        <!-- <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_portrait }}"
+                            type="video/mp4" class="portrait"> -->
                         Your browser does not support the video tag.
                     </video>
 
                     <video class="heroVideo landscape"
                         poster="{{ site.url }}{{ site.baseurl }}/assets/images/home-banner.png" muted playsinline
                         preload autoplay loop>
-                        <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}"
-                            type="video/mp4" class="landscape">
+                        <!-- <source src="{{ site.url }}{{ site.baseurl }}{{ page.hero_video_landscape }}"
+                            type="video/mp4" class="landscape"> -->
                         Your browser does not support the video tag.
                     </video>
                 </div>
